bindings/c/zkmetal.h

/* ================================================================
 * Grumpkin Curve (y^2 = x^3 - 17 over BN254 Fr)
 * ================================================================ */

/** Grumpkin projective point addition. */
void grumpkin_point_add(const uint64_t p[12], const uint64_t q[12], uint64_t r[12]);
/** Grumpkin point doubling. */
void grumpkin_point_double(const uint64_t p[12], uint64_t r[12]);
/** Grumpkin scalar multiplication (windowed, w=4). */
void grumpkin_scalar_mul(const uint64_t p[12], const uint64_t scalar[4], uint64_t r[12]);
/** Grumpkin Pippenger MSM (multi-threaded). */
void grumpkin_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                             int n, uint64_t *result);
/* ================================================================
 * secp256k1 Curve Operations
 * ================================================================ */

/** secp256k1 projective point addition. */
void secp256k1_point_add(const uint64_t *p, const uint64_t *q, uint64_t *r);
/** secp256k1 scalar multiplication. */
void secp256k1_point_scalar_mul(const uint64_t *p, const uint64_t *scalar, uint64_t *r);
/** secp256k1 Pippenger MSM (multi-threaded). */
void secp256k1_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                              int n, uint64_t *result);
/* ================================================================
 * BLS12-381 Fr (scalar field, 4-limb, 255-bit)
 * ================================================================ */

/** Fr Montgomery multiplication. */
void bls12_381_fr_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
/** Fr squaring. */
void bls12_381_fr_sqr(const uint64_t a[4], uint64_t r[4]);
/** Fr addition. */
void bls12_381_fr_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
/** Fr subtraction. */
void bls12_381_fr_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
/** Fr negation. */
void bls12_381_fr_neg(const uint64_t a[4], uint64_t r[4]);
/* ================================================================
 * BLS12-381 Fp (base field, 6-limb, 381-bit)
 * ================================================================ */

/** Fp Montgomery multiplication. */
void bls12_381_fp_mul(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
/** Fp squaring. */
void bls12_381_fp_sqr(const uint64_t a[6], uint64_t r[6]);
/** Fp addition. */
void bls12_381_fp_add(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
/** Fp subtraction. */
void bls12_381_fp_sub(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
/** Fp negation. */
void bls12_381_fp_neg(const uint64_t a[6], uint64_t r[6]);
/** Fp inverse. */
void bls12_381_fp_inv_ext(const uint64_t a[6], uint64_t r[6]);
/** Fp square root: returns 1 if exists, 0 otherwise. */
int bls12_381_fp_sqrt(const uint64_t a[6], uint64_t r[6]);
/** Miller loop: e(P, Q) before final exponentiation. */
void bls12_381_miller_loop(const uint64_t p_aff[12], const uint64_t q_aff[24], uint64_t result[72]);
/** Final exponentiation. */
void bls12_381_final_exp(const uint64_t f[72], uint64_t result[72]);
/** Full pairing: e(P, Q). */
void bls12_381_pairing(const uint64_t p_aff[12], const uint64_t q_aff[24], uint64_t result[72]);
/** Multi-pairing check: product(e(P_i, Q_i)) == 1. Returns 1 if true. */
int bls12_381_pairing_check(const uint64_t *pairs, int n);
/* ================================================================
 * BLS12-381 G1 Curve (Jacobian projective, 6-limb coords)
 * Projective: 18 uint64_t, Affine: 12 uint64_t
 * ================================================================ */

/** G1 point addition. */
void bls12_381_g1_point_add(const uint64_t p[18], const uint64_t q[18], uint64_t r[18]);
/** G1 point doubling. */
void bls12_381_g1_point_double(const uint64_t p[18], uint64_t r[18]);
/** G1 mixed addition: projective + affine. */
void bls12_381_g1_point_add_mixed(const uint64_t p[18], const uint64_t q_aff[12], uint64_t r[18]);
/** G1 scalar multiplication. */
void bls12_381_g1_scalar_mul(const uint64_t p[18], const uint64_t scalar[4], uint64_t r[18]);
/** G1 Pippenger MSM (multi-threaded). */
void bls12_381_g1_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                                 int n, uint64_t *result);
/* ================================================================
 * Pasta Curves (Pallas & Vesta)
 * ================================================================ */

/* -- Pallas (y^2 = x^3 + 5) -------------------------------------- */

void pallas_fp_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void pallas_fp_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void pallas_fp_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void pallas_fp_neg(const uint64_t a[4], uint64_t r[4]);
/** Pallas Pippenger MSM. */
void pallas_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                           int n, uint64_t *result);
/* -- Vesta (y^2 = x^3 + 5) --------------------------------------- */

void vesta_fp_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void vesta_fp_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void vesta_fp_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void vesta_fp_neg(const uint64_t a[4], uint64_t r[4]);
/** Vesta Pippenger MSM. */
void vesta_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                          int n, uint64_t *result);
/* ================================================================
 * Ed25519 (twisted Edwards, base field p = 2^255 - 19)
 * Extended coordinates: 16 uint64_t (X[4], Y[4], Z[4], T[4])
 * Affine: 8 uint64_t (X[4], Y[4])
 * ================================================================ */

/* -- Fp (base field, Solinas reduction) --------------------------- */

void ed25519_fp_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fp_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fp_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void ed25519_fp_neg(const uint64_t a[4], uint64_t r[4]);
void ed25519_fp_inverse(const uint64_t a[4], uint64_t r[4]);
/** Scalar multiplication. */
void ed25519_scalar_mul(const uint64_t p[16], const uint64_t scalar[4], uint64_t r[16]);
/** Pippenger MSM on Ed25519. */
void ed25519_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                            int n, uint64_t *result);
/** EdDSA verify: returns 1 if valid, 0 otherwise. */
int ed25519_eddsa_verify(const uint64_t gen[16], const uint64_t s_raw[4],
                          const uint64_t r_point[16], const uint64_t h_raw[4],
                          const uint64_t pub_key[16]);
/** Batch add: out[i] = a[i] + b[i] mod p. */
void gl_batch_add_neon(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
/** Batch subtract: out[i] = a[i] - b[i] mod p. */
void gl_batch_sub_neon(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
/** Batch multiply: out[i] = a[i] * b[i] mod p. */
void gl_batch_mul_neon(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);